modules/vpc/main.tf
resource "aws_vpc" "some_custom_vpc" {
  cidr_block = var.vpc_cidr

  tags = {
    Name = "My monitoring VPC"
  }
}

resource "aws_subnet" "some_public_subnet" {
  vpc_id     = aws_vpc.some_custom_vpc.id
  cidr_block = var.public_sub_1_cidr

  tags = {
    Name = "My monitoring Subnet - public"
  }
}

resource "aws_subnet" "some_private_subnet" {
  vpc_id     = aws_vpc.some_custom_vpc.id
  cidr_block = var.private_sub_1_cidr

  tags = {
    Name = "My monitoring - private"
  }
}

resource "aws_internet_gateway" "some_ig" {
  vpc_id = aws_vpc.some_custom_vpc.id

  tags = {
    Name = "My monitoring Internet Gateway"
  }
}

resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.some_custom_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.some_ig.id
  }

  route {
    ipv6_cidr_block = "::/0"
    gateway_id      = aws_internet_gateway.some_ig.id
  }

  tags = {
    Name = "Public Route Table"
  }
}

resource "aws_route_table_association" "public_1_rt_a" {
  subnet_id      = aws_subnet.some_public_subnet.id
  route_table_id = aws_route_table.public_rt.id
}

resource "aws_security_group" "public_sg" {
  name   = "HTTP, HTTPS  and SSH"
  vpc_id = aws_vpc.some_custom_vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
}
